--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,9 +31,9 @@ jobs:
 
       - name: Build App
         run: yarn build
-        env:
-        GITHUB_TOKEN: ${{secrets.GITHUBTOKEN}}
-        NPM_TOKEN: ${{secrets.NPMTOKEN}}
 
       - name: Semantic Release
+        env:
+          GITHUBTOKEN: ${{secrets.GITHUBTOKEN}}
+          NPMTOKEN: ${{secrets.NPMTOKEN}}
         run: npx semantic-release
